--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ if (item) {
 <li>Работещ компютър
 <li>Достъп до Интернет
 <h2>Зареждане на Linux</h2>
-<p>За инсталацията ще Ви е нужно да инсталирате Линукс на диск или флашка (която е празна) чрез UnetBootin (ЮнетБуутин; налична за всички операционни системи). Поставете диска в ДВД устройството или включете флашката във Вашия компютър. Препоръчваме да изберете „Lubuntu“ (за стари и нови компютри) или „Linux Mint“. Те са базирани на известния „Убунту“, разработен от Каноникъл. Може да намерите различни дистрибуции на <a href="http://www.distrowatch.com">www.distrowatch.com.След като сте си избрали дистрибуцията по Ваш вкус и сте приготвили инсталационният носител е време за инсталация.</p>
+<p>За инсталацията ще Ви е нужно да инсталирате Линукс на диск или флашка (която е празна) чрез UnetBootin (ЮнетБуутин; налична за всички операционни системи). Поставете диска в ДВД устройството или включете флашката във Вашия компютър. Препоръчваме да изберете „Lubuntu“ (за стари и нови компютри) или „Linux Mint“. Те са базирани на известния „Убунту“, разработен от Каноникъл. Може да намерите различни дистрибуции на <a href="http://www.distrowatch.com">www.distrowatch.com</a>. След като сте си избрали дистрибуцията по Ваш вкус и сте приготвили инсталационният носител е време за инсталация.</p>
 <img src="./UNITY/UNET1.png" width="393" height="294" alt="Unetbootin Интерфейс">
 </div>
 </div>
