--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ margin: 1%;
     position: absolute;
     top: 0;
 }
-.about{
+#about{
     margin-bottom: 1%;
 }
-.about1{
+#about1{
     margin-bottom: 1%;
 }
 </style>
