--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="wrap">
             <img src="fol1.png">
             <div class="folder">
-                <iframe src="test.html" scrolling="yes"></iframe>
+                <iframe src="u1.html" scrolling="yes" frameBorder="0"></iframe>
             </div>
 
         </div>
@@ -38,10 +38,9 @@
         <div class="wrap">
             <img src="fol2.png">
             <div class="folder">
-<div class="iframe">
-<iframe src="https://www.youtube.com/embed/hlAScmDXZa4?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe src="u2.html" scrolling="yes" frameBorder="0"></iframe>
             </div>
-</div>
+
         </div>
     </div>
  </div>
